# jake-dms

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: TECHNICAL_SPEC.md
migrations/: env.py
migrations/versions/: 07ec9fd570f8_initial_schema.py  cd6b842e199e_add_query_indexes.py
src/: executive_summary.py
src/agents/cash_forecast/: agent.py  models.py
src/agents/concentration/: agent.py  models.py
src/agents/content_roi/: agent.py  models.py
src/agents/investor_report/: agent.py  models.py
src/agents/platform_recon/: agent.py  models.py
src/api/: main.py
src/core/: config.py  intacct_client.py  meta_client.py  models.py  scheduler.py  telegram_bot.py  youtube_analytics.py
src/db/: engine.py  models.py
src/demo/: app.py  mock_data.py  theme.py  youtube_public.py
src/demo/pages/: 01_command_center.py  01_📈_Content_ROI.py  02_content_roi.py  02_📋_Command_Center.py  03_reconciliation.py  03_🔄_Reconciliation.py  04_cash_flow.py  04_💰_Cash_Flow.py  05_investor_package.py  05_📦_Investor_Package.py  06_🎬_YouTube_Deep_Dive.py
tests/: conftest.py  test_agents.py  test_api.py  test_executive_summary.py  test_intacct_client.py  test_mock_data.py  test_youtube_public.py
