[tool.poetry]
name = "jake-dms"
version = "0.1.0"
description = "CFO Command Center for Dhar Mann Studios"
authors = ["Jake Pilcher"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = "^2.0"
aiosqlite = "^0.19"
asyncpg = "^0.30"
httpx = "^0.27"
loguru = "^0.7"
streamlit = "^1.40"
plotly = "^5.24"
python-dotenv = "^1.0"
pandas = "^2.0"
xmltodict = "^0.14"
python-telegram-bot = "^21.0"
apscheduler = "^3.10"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
reportlab = "^4.0"
openpyxl = "^3.1"
google-auth = "^2.0"
google-auth-oauthlib = "^1.0"
alembic = "^1.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"
pytest-cov = "^5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.coverage.run]
source = ["src"]
omit = ["src/demo/*"]

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
